testsuite/parser_tests/fail/types_err.0.psl
x0 : float(1);
x1 : double(12);
x2 : int(x1);
x3 : char(133)
